--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
 --text-color: #dbe4ef;
 --card-front-color: #144480;
---card-back-color: #00f4bf;
---cor-da-borda:#1509f5;
---cor-fundo-cartao: #ec0b0b;
+--card-back-color: #f0f400;
+--cor-da-borda:#f5093c;
+--cor-fundo-cartao: #d20bec18;
 }
 
 body {
