--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
 --text-color: #dbe4ef;
---card-front-color: #104b8f;
+--card-front-color: #ca1d1d;
 --card-back-color: #f0f400;
 --cor-da-borda:#f5093c;
 --cor-fundo-cartao: #d20bec18;
