--- a/style.css
+++ b/style.css
@@ -97,3 +97,21 @@ text-align: center;
 font-size: 1rem;
 margin-top: 0.5rem;
 }
+
+@media(max-widtb: 560px){
+    body{
+        background-color: gold;
+    }
+
+    .cartao{
+        flex: 1 0 calc(100% - 1rem);
+    }
+
+    .cartao__conteudoh3{
+        font-size: 3vw;
+    }
+     
+    .cartao__conteudo p{
+        font-size: 3.8vw;
+    }
+}
